# CLDL-CUDA

./: CMakeLists.txt  README.md  jetsonGPIO.h
Audio_out_testing/: Audio_out_test.c  CMakeLists.txt
Callback_based_i2s_testing/: CMakeLists.txt  Testing_Callback.cpp  reading_mem_locations.cpp
Pin_tests/: CMakeLists.txt  Initial_Testing.cpp  build.sh  jetsonGPIO.c
Pin_tests/executable_code/: CMakeLists.txt  Initial_Testing.cpp
Pin_tests/test_files/: Makefile
Report Results/: Concat_Original_Layer_Density_100_in_1_out_.csv  Concat_Original_Layer_Density_150_in_1_out_.csv  Concat_Original_Layer_Density_1_in_1_out_.csv  Concat_Original_Layer_Density_200_in_1_out_.csv  Concat_Original_Layer_Density_300_in_1_out_.csv  Concat_Original_Layer_Density_400_in_1_out_.csv  Concat_Original_Layer_Density_500_in_1_out_.csv  Concat_Original_Layer_Density_50_in_1_out_.csv  Concat_Original_Library_baseline_measurement..csv  Concat_Updated_Layer_Density_100_in_1_out_.csv  Concat_Updated_Layer_Density_1_in_1_out_.csv  Concat_Updated_Layer_Density_200_in_1_out_.csv  Concat_Updated_Layer_Density_300_in_1_out_.csv  Concat_Updated_Layer_Density_400_in_1_out_.csv  Concat_Updated_Layer_Density_500_in_1_out_.csv  Concat_Updated_Layer_Density_50_in_1_out_.csv  Concatinated_Final_Library_baseline_measurement.csv
audio_out_testing/: Audio_out_test.c
ecg_tests/: CMakeLists.txt  ecg_graph_test.cu  ecg_test.cu  ecg_test_sampling_rate.cu
gpu_tests/: CMakeLists.txt  cublas_testing.cu  gpu_tests.cu  gpu_tests_different_sizes.cu  testing_individual_elements_of_gpu_code.cu
gtest/: CMakeLists.txt
include/cldl/: Layer.h  Net.h  Neuron.h
jetsonNanoRegisterAccess/examples/I2s_test/: I2s_test.cpp  Makefile  keyboard_emu
jetsonNanoRegisterAccess/examples/blinky/: blinky
jetsonNanoRegisterAccess/examples/read_all_inputs/: read_all_inputs
lib/: Layer.cu  Net.cu  Neuron.cu
python_plot_files/: Comparing_changes.py  Plotting_Final_output.py  edited_layer_code_plot.py  gpu_output_plot.py
python_plot_files/per_sample_outputs/: gpu_time_taken_per_sample_changes_1.txt  gpu_time_taken_per_sample_changes_100.txt  gpu_time_taken_per_sample_changes_1000.txt  gpu_time_taken_per_sample_changes_200.txt  gpu_time_taken_per_sample_changes_300.txt  gpu_time_taken_per_sample_changes_400.txt  gpu_time_taken_per_sample_changes_500.txt  gpu_time_taken_per_sample_changes_600.txt  gpu_time_taken_per_sample_changes_700.txt  gpu_time_taken_per_sample_changes_800.txt  gpu_time_taken_per_sample_changes_900.txt  gpu_time_taken_per_sample_original_1.txt  gpu_time_taken_per_sample_original_100.txt  gpu_time_taken_per_sample_original_1000.txt  gpu_time_taken_per_sample_original_200.txt  gpu_time_taken_per_sample_original_300.txt  gpu_time_taken_per_sample_original_400.txt  gpu_time_taken_per_sample_original_500.txt  gpu_time_taken_per_sample_original_600.txt  gpu_time_taken_per_sample_original_700.txt  gpu_time_taken_per_sample_original_800.txt  gpu_time_taken_per_sample_original_900.txt
reading_wav_files/: CMakeCache.txt  CMakeLists.txt  Makefile  Reading_wav_file.cpp  cmake_install.cmake  wav_info
recorded_testing_results/edited/: edited_150_gpu_time_taken_per_sample.txt  edited_1_gpu_time_taken_per_sample.txt  edited_200_gpu_time_taken_per_sample.txt  edited_50_gpu_time_taken_per_sample.txt
test_files/: CMakeLists.txt  Testing_the_each_element_of_input_prop.cu  ecg_test.cu  gpu_tests.cu  t.cu  testing_individual_elements_of_gpu_code.cu  testing_neuron_code_only.cu  wav_tests.cu
wav_tests/: CMakeLists.txt  wav_reader.h  wav_tests.cu
